initcontainer.yml
---
apiVersion:	v1
kind: Pod
metadata:
  name: initcontainers
  labels:
    run: webapp       
spec:
  containers:
    - name: alpine
      image: latest
      port:
        - containerPort: 80
