onfailure.yml
apiVersion:	v1
kind: Pod
metadata:
  name: onfailure
spec:
  restartPolicy: OnFailure
  containers:
    - name: gameoflife
      image: batchusivaji/kishore:1.1
      args:
        - sleep
        - 10mb
---
apiVersion:	v1
kind: Pod
metadata:
  name: onfailure
spec:
  restartPolicy: OnFailure
  containers:
    - name: gameoflife
      image: batchusivaji/kishore:1.1
      ports:
        - containerPort: 9090
