headless-service.yml
---
apiVersion:	v1
kind: Service
metadata:
  name: service-file
  labels:
    app: redis 
    version: 7.2
spec:
